--- a/docs.html
+++ b/docs.html
@@ -4,12 +4,12 @@
 <head>
     <title>Flexy Nuxtjs Free Admin Template | Docs</title>
     <meta http-equiv="refresh" 
-          content="0; URL = ''" />
+          content="0; URL = 'https://wrappixel.github.io/free-documentation-wp/nuxt/flexy/index.html'" />
 </head>
 
 <body>
     <h1>Flexy Nuxtjs Free Admin Template</h1>
-    <a href=""></a>
+    <a href="https://wrappixel.github.io/free-documentation-wp/nuxt/flexy/index.html">https://wrappixel.github.io/free-documentation-wp/nuxt/flexy/index.html</a>
 </body>
 
 </html>
